log
Sat 29 Mar 2025 11:33:33 PM UTC: 
 list.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
25021aa
Sat 29 Mar 2025 11:39:44 PM UTC: 
 list.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
c08121f
Sat 29 Mar 2025 11:42:28 PM UTC: 
 list.c | 4 +---
 1 file changed, 1 insertion(+), 3 deletions(-)
 tests:  1|5
total_score: 10/70
e6d7921
Sat 29 Mar 2025 11:43:05 PM UTC: 
 list.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  1|5
total_score: 10/70
fe80be7
Sat 29 Mar 2025 11:46:45 PM UTC: 
 list.c | 7 +++++--
 1 file changed, 5 insertions(+), 2 deletions(-)
In file included from test.c:5:
list.c: In function ‘nextList’:
list.c:50:1: error: control reaches end of non-void function [-Werror=return-type]
   50 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
0ad486a
Sat 29 Mar 2025 11:55:58 PM UTC: 
 list.c | 7 ++++---
 1 file changed, 4 insertions(+), 3 deletions(-)
 tests:  0|0
f6358da
Sun 30 Mar 2025 12:04:36 AM UTC: 
 list.c | 13 ++++++++++---
 1 file changed, 10 insertions(+), 3 deletions(-)
 tests:  0|0
fe8dbeb
Sun 30 Mar 2025 12:07:33 AM UTC: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0
14afa52
Sun 30 Mar 2025 12:16:08 AM UTC: 
 list.c | 5 +++++
 1 file changed, 5 insertions(+)
 tests:  0|0
8d02ebd
Sun 30 Mar 2025 12:29:00 AM UTC: 
 list.c | 10 +++++++---
 1 file changed, 7 insertions(+), 3 deletions(-)
 tests:  0|0
7b91c02
Sun 30 Mar 2025 12:31:53 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
2ae415c
Sun 30 Mar 2025 12:34:19 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
496d48c
Sun 30 Mar 2025 12:38:21 AM UTC: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0
7b26243
Sun 30 Mar 2025 12:41:04 AM UTC: 
 list.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  0|0
c8bd9ab
Sun 30 Mar 2025 12:42:45 AM UTC: 
 list.c | 4 ----
 1 file changed, 4 deletions(-)
 tests:  0|0
ff7d242
Sun 30 Mar 2025 12:44:04 AM UTC: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|0
74dd2ae
Sun 30 Mar 2025 12:47:29 AM UTC: 
 list.c | 6 ++++++
 1 file changed, 6 insertions(+)
 tests:  0|0
8e72ce6
Sun 30 Mar 2025 12:50:03 AM UTC: 
 list.c | 36 ++++--------------------------------
 1 file changed, 4 insertions(+), 32 deletions(-)
 tests:  1|5
total_score: 10/70
aed955f
Sun 30 Mar 2025 12:50:37 AM UTC: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
test.c: In function ‘firstList’:
test.c:448:5: error: ‘main’ is normally a non-static function [-Werror=main]
  448 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:468:1: error: expected declaration or statement at end of input
  468 | }
      | ^
test.c:469: error: control reaches end of non-void function [-Werror=return-type]
test.c: At top level:
test.c:448:5: error: ‘main’ defined but not used [-Werror=unused-function]
  448 | int main( int argc, char *argv[] ) {
      |     ^~~~
In file included from test.c:5:
list.c:81:6: error: ‘cleanList’ defined but not used [-Werror=unused-function]
   81 | void cleanList(List * list) {
      |      ^~~~~~~~~
list.c:72:8: error: ‘popBack’ defined but not used [-Werror=unused-function]
   72 | void * popBack(List * list) {
      |        ^~~~~~~
list.c:59:6: error: ‘pushBack’ defined but not used [-Werror=unused-function]
   59 | void pushBack(List * list, void * data) {
      |      ^~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
7714060
Sun 30 Mar 2025 12:51:26 AM UTC: 
 list.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
test.c: In function ‘firstList’:
test.c:448:5: error: ‘main’ is normally a non-static function [-Werror=main]
  448 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:468:1: error: expected declaration or statement at end of input
  468 | }
      | ^
test.c:469: error: control reaches end of non-void function [-Werror=return-type]
test.c: At top level:
test.c:448:5: error: ‘main’ defined but not used [-Werror=unused-function]
  448 | int main( int argc, char *argv[] ) {
      |     ^~~~
In file included from test.c:5:
list.c:84:6: error: ‘cleanList’ defined but not used [-Werror=unused-function]
   84 | void cleanList(List * list) {
      |      ^~~~~~~~~
list.c:75:8: error: ‘popBack’ defined but not used [-Werror=unused-function]
   75 | void * popBack(List * list) {
      |        ^~~~~~~
list.c:62:6: error: ‘pushBack’ defined but not used [-Werror=unused-function]
   62 | void pushBack(List * list, void * data) {
      |      ^~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
69001ce
Sun 30 Mar 2025 12:54:19 AM UTC: 
 list.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
test.c: In function ‘firstList’:
test.c:448:5: error: ‘main’ is normally a non-static function [-Werror=main]
  448 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:468:1: error: expected declaration or statement at end of input
  468 | }
      | ^
test.c:469: error: control reaches end of non-void function [-Werror=return-type]
test.c: At top level:
test.c:448:5: error: ‘main’ defined but not used [-Werror=unused-function]
  448 | int main( int argc, char *argv[] ) {
      |     ^~~~
In file included from test.c:5:
list.c:85:6: error: ‘cleanList’ defined but not used [-Werror=unused-function]
   85 | void cleanList(List * list) {
      |      ^~~~~~~~~
list.c:76:8: error: ‘popBack’ defined but not used [-Werror=unused-function]
   76 | void * popBack(List * list) {
      |        ^~~~~~~
list.c:63:6: error: ‘pushBack’ defined but not used [-Werror=unused-function]
   63 | void pushBack(List * list, void * data) {
      |      ^~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
8b66314
